# snappy_elixir

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  Makefile.win  README.md  mix.exs
.github/workflows/: linux-precompile.yml  linux-x86_64.yml  macos-precompile.yml  macos-x86_64.yml  windows-precompile.yml  windows-x86_64.yml
c_src/: nif_utils.hpp  snappy_nif.cpp
lib/: snappy.ex  snappy_elixir.ex  snappy_nif.ex
test/: snappy_elixir_test.exs  snappy_test.exs
